tests/ui/invalid_frompy_derive.stderr
error: cannot derive FromPyObject for empty structs and variants
 --> tests/ui/invalid_frompy_derive.rs:4:11
  |
4 | struct Foo();
  |           ^^

error: cannot derive FromPyObject for empty structs and variants
 --> tests/ui/invalid_frompy_derive.rs:8:13
  |
8 | struct Foo2 {}
  |             ^^

error: cannot derive FromPyObject for empty enum
  --> tests/ui/invalid_frompy_derive.rs:12:6
   |
12 | enum EmptyEnum {}
   |      ^^^^^^^^^

error: cannot derive FromPyObject for empty structs and variants
  --> tests/ui/invalid_frompy_derive.rs:17:15
   |
17 |     EmptyTuple(),
   |               ^^

error: cannot derive FromPyObject for empty structs and variants
  --> tests/ui/invalid_frompy_derive.rs:24:17
   |
24 |     EmptyStruct {},
   |                 ^^

error: cannot derive FromPyObject for empty structs and variants
  --> tests/ui/invalid_frompy_derive.rs:31:27
   |
31 | struct EmptyTransparentTup();
   |                           ^^

error: cannot derive FromPyObject for empty structs and variants
  --> tests/ui/invalid_frompy_derive.rs:36:31
   |
36 | struct EmptyTransparentStruct {}
   |                               ^^

error: cannot derive FromPyObject for empty structs and variants
  --> tests/ui/invalid_frompy_derive.rs:42:15
   |
42 |     EmptyTuple(),
   |               ^^

error: cannot derive FromPyObject for empty structs and variants
  --> tests/ui/invalid_frompy_derive.rs:50:17
   |
50 |     EmptyStruct {},
   |                 ^^

error: transparent structs and variants can only have 1 field
  --> tests/ui/invalid_frompy_derive.rs:57:35
   |
57 | struct TransparentTupTooManyFields(String, String);
   |                                   ^^^^^^^^^^^^^^^^

error: transparent structs and variants can only have 1 field
  --> tests/ui/invalid_frompy_derive.rs:62:39
   |
62 |   struct TransparentStructTooManyFields {
   |  _______________________________________^
63 | |
64 | |     foo: String,
65 | |     bar: String,
66 | | }
   | |_^

error: transparent structs and variants can only have 1 field
  --> tests/ui/invalid_frompy_derive.rs:71:15
   |
71 |     EmptyTuple(String, String),
   |               ^^^^^^^^^^^^^^^^

error: transparent structs and variants can only have 1 field
  --> tests/ui/invalid_frompy_derive.rs:79:17
   |
79 |       EmptyStruct {
   |  _________________^
80 | |
81 | |         foo: String,
82 | |         bar: String,
83 | |     },
   | |_____^

error: expected one of: `attribute`, `item`, `from_py_with`, `into_py_with`, `default`
  --> tests/ui/invalid_frompy_derive.rs:89:12
   |
89 |     #[pyo3(attr)]
   |            ^^^^

error: expected string literal
  --> tests/ui/invalid_frompy_derive.rs:96:22
   |
96 |     #[pyo3(attribute(1))]
   |                      ^

error: expected at most one argument: `attribute` or `attribute("name")`
   --> tests/ui/invalid_frompy_derive.rs:103:25
    |
103 |     #[pyo3(attribute("a", "b"))]
    |                         ^

error: attribute name cannot be empty
   --> tests/ui/invalid_frompy_derive.rs:110:22
    |
110 |     #[pyo3(attribute(""))]
    |                      ^^

error: unexpected end of input, expected string literal
   --> tests/ui/invalid_frompy_derive.rs:117:22
    |
117 |     #[pyo3(attribute())]
    |                      ^

error: expected at most one argument: `item` or `item(key)`
   --> tests/ui/invalid_frompy_derive.rs:124:20
    |
124 |     #[pyo3(item("a", "b"))]
    |                    ^

error: unexpected end of input, expected literal
   --> tests/ui/invalid_frompy_derive.rs:131:17
    |
131 |     #[pyo3(item())]
    |                 ^

error: only one of `attribute` or `item` can be provided
   --> tests/ui/invalid_frompy_derive.rs:138:18
    |
138 |     #[pyo3(item, attribute)]
    |                  ^^^^^^^^^

error: expected one of: `transparent`, `from_item_all`, `annotation`, `crate`, `rename_all`
   --> tests/ui/invalid_frompy_derive.rs:144:8
    |
144 | #[pyo3(unknown = "should not work")]
    |        ^^^^^^^

error: `annotation` is unsupported for structs
   --> tests/ui/invalid_frompy_derive.rs:151:21
    |
151 | #[pyo3(annotation = "should not work")]
    |                     ^^^^^^^^^^^^^^^^^

error: expected string literal
   --> tests/ui/invalid_frompy_derive.rs:159:25
    |
159 |     #[pyo3(annotation = 1)]
    |                         ^

error: FromPyObject can be derived with at most one lifetime parameter
   --> tests/ui/invalid_frompy_derive.rs:165:22
    |
165 | enum TooManyLifetimes<'a, 'b> {
    |                      ^

error: #[derive(FromPyObject)] is not supported for unions
   --> tests/ui/invalid_frompy_derive.rs:172:1
    |
172 | union Union {
    | ^^^^^

error: cannot derive FromPyObject for empty structs and variants
   --> tests/ui/invalid_frompy_derive.rs:177:10
    |
177 | #[derive(FromPyObject)]
    |          ^^^^^^^^^^^^
    |
    = note: this error originates in the derive macro `FromPyObject` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `=`
   --> tests/ui/invalid_frompy_derive.rs:185:24
    |
185 |     #[pyo3(from_py_with)]
    |                        ^

error: `getter` is not permitted on tuple struct elements.
   --> tests/ui/invalid_frompy_derive.rs:198:27
    |
198 | struct InvalidTupleGetter(#[pyo3(item("foo"))] String);
    |                           ^

error: `transparent` structs may not have a `getter` for the inner field
   --> tests/ui/invalid_frompy_derive.rs:205:5
    |
205 |     field: String,
    |     ^^^^^

error: `transparent` structs may not have a `getter` for the inner field
   --> tests/ui/invalid_frompy_derive.rs:217:5
    |
217 |     field: String,
    |     ^^^^^

error: `from_item_all` may only be specified once
   --> tests/ui/invalid_frompy_derive.rs:222:23
    |
222 | #[pyo3(from_item_all, from_item_all)]
    |                       ^^^^^^^^^^^^^

error: Useless `item` - the struct is already annotated with `from_item_all`
   --> tests/ui/invalid_frompy_derive.rs:229:8
    |
229 | #[pyo3(from_item_all)]
    |        ^^^^^^^^^^^^^

error: The struct is already annotated with `from_item_all`, `attribute` is not allowed
   --> tests/ui/invalid_frompy_derive.rs:237:8
    |
237 | #[pyo3(from_item_all)]
    |        ^^^^^^^^^^^^^

error: The struct is already annotated with `from_item_all`, `attribute` is not allowed
   --> tests/ui/invalid_frompy_derive.rs:245:8
    |
245 | #[pyo3(from_item_all)]
    |        ^^^^^^^^^^^^^

error: cannot derive FromPyObject for structs and variants with only default values
   --> tests/ui/invalid_frompy_derive.rs:253:36
    |
253 |   struct StructWithOnlyDefaultValues {
    |  ____________________________________^
254 | |
255 | |     #[pyo3(default)]
256 | |     field: String,
257 | | }
    | |_^

error: cannot derive FromPyObject for structs and variants with only default values
   --> tests/ui/invalid_frompy_derive.rs:261:9
    |
261 |       Foo {
    |  _________^
262 | |
263 | |         #[pyo3(default)]
264 | |         field: String,
265 | |     },
    | |_____^

error: `default` is not permitted on tuple struct elements.
   --> tests/ui/invalid_frompy_derive.rs:269:37
    |
269 | struct NamedTuplesWithDefaultValues(#[pyo3(default)] String);
    |                                     ^

error: `rename_all` may only be specified once
   --> tests/ui/invalid_frompy_derive.rs:273:34
    |
273 | #[pyo3(rename_all = "camelCase", rename_all = "kebab-case")]
    |                                  ^^^^^^^^^^

error: `rename_all` is useless on tuple structs and variants.
   --> tests/ui/invalid_frompy_derive.rs:280:8
    |
280 | #[pyo3(rename_all = "camelCase")]
    |        ^^^^^^^^^^

error: `rename_all` is useless on tuple structs and variants.
   --> tests/ui/invalid_frompy_derive.rs:286:12
    |
286 |     #[pyo3(rename_all = "camelCase")]
    |            ^^^^^^^^^^

error: `rename_all` is not permitted on `transparent` structs and variants
   --> tests/ui/invalid_frompy_derive.rs:292:21
    |
292 | #[pyo3(transparent, rename_all = "camelCase")]
    |                     ^^^^^^^^^^

error: Useless variant `rename_all` - enum is already annotated with `rename_all
   --> tests/ui/invalid_frompy_derive.rs:301:12
    |
301 |     #[pyo3(rename_all = "camelCase")]
    |            ^^^^^^^^^^

error[E0425]: cannot find value `func` in this scope
   --> tests/ui/invalid_frompy_derive.rs:192:27
    |
192 |     #[pyo3(from_py_with = func)]
    |                           ^^^^ not found in this scope

error: aborting due to 44 previous errors

For more information about this error, try `rustc --explain E0425`.
